--- a/AUTHORS
+++ b/AUTHORS
@@ -1,27 +1,32 @@
-Andreas Tolf Tolfsen - andreastt@opera.com
-Bob Evans - bevans@bevans.int.messagesystems.com
-Bob Evans - bizob2828@yahoo.com
-Dan Chan - brknthmb@gmail.com
-Dave Hunt - dave.hunt@gmail.com
-Graham Abell - nicegraham@gmail.com
-Ivan De Marino - ivan.de.marino@gmail.com
-Luke Inman-Semerau - luke.semerau@gmail.com
-Manoj Kumar - manoj9788@gmail.com
-Marcus Merrell - mmerrell@whalesharkmedia.com
-Mark Collin - mark.collin@lazeryattack.com
-NRezek - natrezek@gmail.com
-Oscar Rieken - oriekenjr@gmail.com
-Rivlin - rivlin.pereira@gmail.com
-Santiago Suarez Ordoñez - santiycr@gmail.com
-Wai Hon Law - whhone@gmail.com
-Zac - zcampbell@mozilla.com
-agmen - gavin@agmen2.co.uk
-bizob2828 - bizob2828@yahoo.com
-hking-shutterfly - hking@shutterfly.com
-hoanluu - hoanluu@yahoo.com
-jimevans - james.h.evans.jr@gmail.com
-mmerrell - mmerrell@gmail.com
-paul barton - iwebdevelop@gmail.com
-sheg - danforkosh@yahoo.com
-xrobotika - xrobotika@yahoo.com
-Željko Filipin - zeljko.filipin@gmail.com
+agmen <gavin@agmen2.co.uk>
+Andreas Tolf Tolfsen <andreastt@opera.com>
+Andrey Botalov <botalov.andrey@gmail.com>
+bizob2828 <bizob2828@yahoo.com>
+Bob Evans <bevans@bevans.int.messagesystems.com>
+Bob Evans <bizob2828@yahoo.com>
+Dan Chan <brknthmb@gmail.com>
+Dave Hunt <dave.hunt@gmail.com>
+DirtyMoney <incubusattax@gmail.com>
+djangofan <djangofan@gmail.com>
+Graham Abell <nicegraham@gmail.com>
+hking-shutterfly <hking@shutterfly.com>
+hoanluu <hoanluu@yahoo.com>
+Ivan De Marino <ivan.de.marino@gmail.com>
+jimevans <james.h.evans.jr@gmail.com>
+Jon Thor Austen <djangofan@gmail.com>
+Luke Inman-Semerau <luke.semerau@gmail.com>
+Manoj Kumar <manoj9788@gmail.com>
+Marcus Merrell <mmerrell@whalesharkmedia.com>
+marilyn <marilyn@gtf.org>
+Mark Collin <mark.collin@lazeryattack.com>
+mmerrell <mmerrell@gmail.com>
+NRezek <natrezek@gmail.com>
+Oscar Rieken <oriekenjr@gmail.com>
+paul barton <iwebdevelop@gmail.com>
+Rivlin <rivlin.pereira@gmail.com>
+Santiago Suarez Ordoñez <santiycr@gmail.com>
+sheg <danforkosh@yahoo.com>
+Wai Hon Law <whhone@gmail.com>
+xrobotika <xrobotika@yahoo.com>
+Zac <zcampbell@mozilla.com>
+Željko Filipin <zeljko.filipin@gmail.com>
