--- a/AUTHORS
+++ b/AUTHORS
@@ -1,8 +1,7 @@
 agmen <gavin@agmen2.co.uk>
-Andreas Tolf Tolfsen <andreastt@opera.com>
+Andreas Tolfsen <ato@mozilla.com>
 Andrey Botalov <botalov.andrey@gmail.com>
 bizob2828 <bizob2828@yahoo.com>
-Bob Evans <bevans@bevans.int.messagesystems.com>
 Bob Evans <bizob2828@yahoo.com>
 Dan Chan <brknthmb@gmail.com>
 Dave Hunt <dave.hunt@gmail.com>
