Convert documentation to RST, and provide scaffolding for building it

--- a/AUTHORS
+++ b/AUTHORS
@@ -11,7 +11,7 @@ Graham Abell <nicegraham@gmail.com>
 hking-shutterfly <hking@shutterfly.com>
 hoanluu <hoanluu@yahoo.com>
 Ivan De Marino <ivan.de.marino@gmail.com>
-jimevans <james.h.evans.jr@gmail.com>
+Jim Evans <james.h.evans.jr@gmail.com>
 Jon Thor Austen <djangofan@gmail.com>
 Luke Inman-Semerau <luke.semerau@gmail.com>
 Manoj Kumar <manoj9788@gmail.com>
@@ -21,11 +21,11 @@ Mark Collin <mark.collin@lazeryattack.com>
 mmerrell <mmerrell@gmail.com>
 NRezek <natrezek@gmail.com>
 Oscar Rieken <oriekenjr@gmail.com>
-paul barton <iwebdevelop@gmail.com>
+Paul Barton <iwebdevelop@gmail.com>
 Rivlin <rivlin.pereira@gmail.com>
 Santiago Suarez Ordoñez <santiycr@gmail.com>
 sheg <danforkosh@yahoo.com>
 Wai Hon Law <whhone@gmail.com>
 xrobotika <xrobotika@yahoo.com>
-Zac <zcampbell@mozilla.com>
+Zac Campbell <zcampbell@mozilla.com>
 Željko Filipin <zeljko.filipin@gmail.com>
