Initial work on new theme

--- a/AUTHORS
+++ b/AUTHORS
@@ -28,4 +28,5 @@ sheg <danforkosh@yahoo.com>
 Wai Hon Law <whhone@gmail.com>
 xrobotika <xrobotika@yahoo.com>
 Zac Campbell <zcampbell@mozilla.com>
+Zbigniew Z <zabostz@gmail.com>
 Željko Filipin <zeljko.filipin@gmail.com>
