Added Jon Austen to AUTHORS

--- a/AUTHORS
+++ b/AUTHORS
@@ -12,6 +12,7 @@ hking-shutterfly <hking@shutterfly.com>
 hoanluu <hoanluu@yahoo.com>
 Ivan De Marino <ivan.de.marino@gmail.com>
 Jim Evans <james.h.evans.jr@gmail.com>
+Jon Austen <austenjt@gmail.com>
 Jon Thor Austen <djangofan@gmail.com>
 Luke Inman-Semerau <luke.semerau@gmail.com>
 Manoj Kumar <manoj9788@gmail.com>
