regen authors file; don't show "back to index" for index

--- a/AUTHORS
+++ b/AUTHORS
@@ -4,6 +4,7 @@ Andrey Botalov <botalov.andrey@gmail.com>
 bizob2828 <bizob2828@yahoo.com>
 Bob Evans <bizob2828@yahoo.com>
 Dan Chan <brknthmb@gmail.com>
+Daniel Davison <daniel.jj.davison@gmail.com>
 Dave Hunt <dave.hunt@gmail.com>
 DirtyMoney <incubusattax@gmail.com>
 djangofan <djangofan@gmail.com>
