--- a/AUTHORS
+++ b/AUTHORS
@@ -56,3 +56,4 @@ Yariv Amar <yariv.amar@gmail.com>
 Zac Campbell <zcampbell@mozilla.com>
 Zbigniew Z <zabostz@gmail.com>
 Željko Filipin <zeljko.filipin@gmail.com>
+Chamila Ambahera <chamila.ambahera@gmail.com>
