--- a/AUTHORS
+++ b/AUTHORS
@@ -33,6 +33,7 @@ Mariano <mariano.perdomo@valtech.com>
 marilyn <marilyn@gtf.org>
 Mark Collin <mark.collin@lazeryattack.com>
 Martin Delille <martin@phonations.com>
+Michael Palotas <michael.palotas@eement34.com>
 Milan Masek <milan.m.masek@gmail.com>
 mmerrell <mmerrell@gmail.com>
 Mohammad Rakib Amin <rakib-amin@users.noreply.github.com>
